# src/models/columns.js
@@ -251,6 +251,32 @@ export const EndpointColumns = {
     "lastModified",
     "lastModifiedBy"
   ],
+  "Payments": [
+    "id",
+    "transactionID",
+    "accountNo",
+    "fullName",
+    "contactNo",
+    "receivedPayment",
+    "paymentMethod",
+    "referenceNo",
+    "orNo",
+    "userEmail",
+    "status",
+    "provider",
+    "image",
+    "plan",
+    "accountBalance",
+    "dateProcessed",
+    "processedBy",
+    "remarks",
+    "location",
+    "paymentDate",
+    "barangay",
+    "city",
+    "modifiedBy",
+    "modifiedDate"
+  ],
   "Ports": [
     "id",
     "name",
